@@ -11,7 +11,10 @@ copyright_year    = 2011
 GatherDir.follow_symlinks = 0
 
 [Prereqs]
-; bright colors added in 3.0; if this causes problems: Special => ($Term::ANSIColor::VERSION >= 3 ? 'bright_magenta' : 'magenta'),
+; colored() with initial array ref
+Term::ANSIColor = 1.03
+[Prereqs / RuntimeRecommends]
+; bright colors added in 3.0
 Term::ANSIColor = 3
 
 ; default GatherDir skips leading-dot dirs but we want to include this specific one
